--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -68,9 +68,9 @@
 .grid {
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: space-between; */
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 90%;
 }
 
 .card {
@@ -82,7 +82,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  flex-basis: calc(33.33% - 2rem);
 }
 
 .card:hover,
