--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: rgba(0,0,0,0.5);
 }
 
 .footer {
@@ -79,6 +80,9 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 5px 10px 0 rgba(0, 0, 0, 0.5);
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
@@ -88,8 +92,7 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  border-color: darkred;
 }
 
 .card h2 {
