--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: url('https://wallpaperaccess.com/full/329605.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 a {
@@ -21,6 +25,5 @@ a {
   }
   body {
     color: white;
-    background: black;
   }
 }
