--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -89,6 +89,13 @@
   flex-basis: calc(33.33% - 2rem);
 }
 
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 .card:hover,
 .card:focus,
 .card:active {
@@ -114,7 +121,12 @@
 @media (max-width: 600px) {
   .grid {
     width: 100%;
+    justify-content: center;
     flex-direction: column;
+  }
+
+  .card{
+    flex-basis: 100%;
   }
 }
 
